--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wot-ui-intellisense",
   "displayName": "wot-ui-intellisense",
-  "publisher": "baiyou",
+  "publisher": "wot-ui",
   "description": "",
   "version": "0.0.2",
   "engines": {
