--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wot-ui-intellisense",
+  "name": "wot-ui intellisense",
   "displayName": "wot-ui-intellisense",
   "publisher": "wot-ui",
   "description": "",
