ci: update name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wot-ui intellisense",
-  "displayName": "wot-ui-intellisense",
+  "name": "wot-ui-intellisense",
+  "displayName": "wot-ui intellisense",
   "publisher": "wot-ui",
   "description": "",
   "version": "0.0.2",
