--- a/package.json
+++ b/package.json
@@ -33,13 +33,23 @@
     "languages": [
       {
         "id": "vue",
-        "extensions": [".vue"],
-        "aliases": ["Vue", "vue"]
+        "extensions": [
+          ".vue"
+        ],
+        "aliases": [
+          "Vue",
+          "vue"
+        ]
       },
       {
         "id": "html",
-        "extensions": [".html"],
-        "aliases": ["HTML", "html"]
+        "extensions": [
+          ".html"
+        ],
+        "aliases": [
+          "HTML",
+          "html"
+        ]
       }
     ],
     "grammars": [],
@@ -60,6 +70,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/turndown": "^5.0.5",
     "@types/vscode": "^1.99.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
@@ -74,5 +85,12 @@
   },
   "volta": {
     "node": "22.17.0"
+  },
+  "dependencies": {
+    "@joplin/turndown-plugin-gfm": "^1.0.63",
+    "@truto/turndown-plugin-gfm": "^1.0.2",
+    "@types/cheerio": "^0.22.35",
+    "cheerio": "^1.1.2",
+    "turndown": "^7.2.1"
   }
 }
