--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wot-ui-intellisense",
   "displayName": "wot-ui intellisense",
   "publisher": "wot-ui",
-  "description": "",
+  "description": "一个为 Wot UI 组件库提供智能提示的 VS Code 插件，由 Wot UI 团队开发。",
   "version": "0.0.3",
   "engines": {
     "vscode": "^1.99.0"
@@ -11,7 +11,8 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onLanguage:vue",
+    "onLanguage:html"
   ],
   "main": "./dist/extension.js",
   "icon": "public/logo.png",
@@ -57,7 +58,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "build": "vsce package",
+    "build": "vsce package --no-dependencies",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
@@ -76,6 +77,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.7.1",
     "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9.25.1",
     "ts-loader": "^9.5.2",
