--- a/package.json
+++ b/package.json
@@ -66,9 +66,15 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "commit": "git-cz",
+    "release-major": "standard-version --release-as major",
+    "release-minor": "standard-version --release-as minor",
+    "release-patch": "standard-version --release-as patch"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/turndown": "^5.0.5",
@@ -78,8 +84,12 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.7.1",
+    "commitizen": "^4.3.1",
     "copy-webpack-plugin": "^13.0.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.25.1",
+    "git-cz": "^4.9.0",
+    "standard-version": "^9.5.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.7",
